--- a/public/partials/projectsView.html
+++ b/public/partials/projectsView.html
@@ -1,6 +1,6 @@
 <div ng-controller="ProjectsController">
 	<h1>Project Categories</h1>
-	<div ng-repeat="project in projects | unique: 'labels'">
+	<div ng-repeat="project in projects | uniq: 'labels'">
 			{{project.labels}}
 	</div>
 
