User Interface/design upgrades

--- a/public/partials/projectsView.html
+++ b/public/partials/projectsView.html
@@ -1,17 +1,18 @@
 <div ng-controller="ProjectsController">
+	
 	<h1>Project Categories</h1>
 	<div ng-repeat="project in projects | uniq: 'labels'">
 			{{project.labels}}
 	</div>
 
 	<h1>My Projects</h1>
-	<a href="">Show All</a>
-	<a href="">Show Completed</a>
-	<a href="">Show In Progress</a>
-	<a href="">Show Progress</a>
-	<a href="">Show Shared</a>
-	<a href="">Work on Goal Planning</a>
-	<a href="">Make some progress!</a>
+	<a href="">Show All</a> |
+	<a href="">Show Completed</a> |
+	<a href="">Show In Progress</a> |
+	<a href="">Show Progress</a> |
+	<a href="">Show Shared</a> |
+	<a href="">Work on Goal Planning</a> |
+	<a href="">Make some progress!</a> 
 	
 	<table>
 		<thead>
