--- a/public/partials/homeView.html
+++ b/public/partials/homeView.html
@@ -12,5 +12,7 @@
 <p>So take the plunge and see what adventures await!</p>
 <p>Real Life Avatar is the ultimate purpose drive goal, task, project, and skill manager. You'll be able to find meaning and purpose in everything you do when you start with the end in mind. Whether your are looking to lose a few pounds, learn how to program, starting your own business, you'll find the tools and resources need to get the job done.</p>
 <p>Along with community support, guidance, advice, and tools; you'll build the mental and emotional supported needed to achieve your greatest goals and live the life you've always wanted.</p>
+
+<p>Get started with <a href="#/skills">SKILLS</a></p>
 </body>
 </html>
