--- a/public/partials/homeView.html
+++ b/public/partials/homeView.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang='en'>
-<head>
-	<meta char='UTF-8'>
-	<title>Home</title>
-</head>
-<body>
+<script>
+$('a#future').click(function(){
+	window.open('functionality-planning.md', 'window name', 'window settings');
+	return false;
+});
+$('a#added').click(function(){
+	window.open('functionality-added.md', 'window name', 'window settings');
+	return false;
+});
+</script>
 <h1>Welcome to Real Life Avatar!</h1>
 
 <p>Have you ever played an RPG? Do you remember how excited you were to gain experience points, build skills, unlock new powers and abilities? Do you remember how amazing it felt when you finally leveled up and you now have access to an amazing array "attacks" and abilities. Now you can do the same in your everyday life!</p>
@@ -14,5 +17,12 @@
 <p>Along with community support, guidance, advice, and tools; you'll build the mental and emotional supported needed to achieve your greatest goals and live the life you've always wanted.</p>
 
 <p>Get started with <a href="#/skills">SKILLS</a></p>
+
+<h4>Upcoming Releases</h4>
+<p>Projects and Goals will be released with the same functionality as skills and tasks.</p>
+
+<a href='#' id='future'>Planned Functionality</a><br>
+<a href='#' id='added'>Recently Added Functionality</a>
+
 </body>
 </html>
